--- a/views/game.hbs
+++ b/views/game.hbs
@@ -81,7 +81,7 @@
             <i class="material-icons">more_vert</i>
           </button>
           <ul class="mdl-menu mdl-js-menu mdl-js-ripple-effect mdl-menu--bottom-right" for="hdrbtn">
-            <li class="mdl-menu__item" id="generateFact">Words from the Orange one</li>
+            <li class="mdl-menu__item" id="generateFact">Words from the Chief</li>
             <li class="mdl-menu__item">How to Play</li>
             <li class="mdl-menu__item">Logout</li>
           </ul>
